[gd_scene load_steps=2 format=3 uid="uid://dc7j6topy0fyi"]

[ext_resource type="Script" path="res://Scripts/game_over_ui.gd" id="1_p51p2"]

[node name="GameOverUI" type="CanvasLayer"]
script = ExtResource("1_p51p2")

[node name="GameOver_control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="GameOver_control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 256
theme_override_constants/margin_top = 64
theme_override_constants/margin_right = 256
theme_override_constants/margin_bottom = 64

[node name="ColorRect" type="ColorRect" parent="GameOver_control/MarginContainer"]
layout_mode = 2
color = Color(0.109804, 0.109804, 0.109804, 0.623529)

[node name="MarginContainer" type="MarginContainer" parent="GameOver_control/MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="GameOver_control/MarginContainer/MarginContainer"]
layout_mode = 2

[node name="GameOverTitle" type="Label" parent="GameOver_control/MarginContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "TItle"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="GameOver_control/MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="GameOver_control/MarginContainer/MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 12

[node name="allResult_l" type="Label" parent="GameOver_control/MarginContainer/MarginContainer/VBoxContainer/ScrollContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "1"
vertical_alignment = 1

[node name="againBtn" type="Button" parent="GameOver_control/MarginContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "PLAY AGAIN"

[connection signal="pressed" from="GameOver_control/MarginContainer/MarginContainer/VBoxContainer/againBtn" to="." method="_on_again_btn_pressed"]
